--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <a href="/usage">Documentation</a>
                         </li>
                         <li class="">
-                            <a href="/code">Code</a>
+                            <a href="https://github.com/inconshreveable/srvdir">Code</a>
                         </li>
                 </ul>
                 <h3 class="wordmark muted"><a href="/">srvdir</a></h3>
@@ -159,7 +159,7 @@
                 <div class="row-fluid">
                     <div class="span6">
                         <h4>Open Source</h4>
-                        <p>Both srvdir's client and server are <a href="/code">open-source on Github</a>. Help make it better!</p>
+                        <p>Both srvdir's client and server are <a href="https://github.com/inconshreveable/srvdir">open-source on Github</a>. Help make it better!</p>
                     </div>
                     <div class="span6">
                         <h4>Upload too</h4>
